# gralph

./: .gitignore  AGENTS.md  README.md  install.ps1  install.sh  progress.txt  pyproject.toml  ralph.sh  tasks.yaml  todo.md
.opencode/skill/ralph/: SKILL.md
gralph-dashboard/: pyproject.toml
gralph-dashboard/src/gralph_dashboard/: __init__.py
scripts/gralph/: gralph.cmd  gralph.ps1  gralph.sh  prd.json.example  prompt.md  tasks.yaml.example
skills/prd/: SKILL.md
skills/ralph/: SKILL.md
src/gralph/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  engine_errors.py  git_ops.py  io_utils.py  log.py  notify.py  prd.py  runner.py  scheduler.py  skills.py  update.py
src/gralph/engines/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py  opencode.py  registry.py
src/gralph/tasks/: __init__.py  model.py
tests/: conftest.py  dag-validation.test.sh  run.sh  scheduler.test.sh  test_artifacts_summary.py  test_cli.py  test_config.py  test_e2e_real_dag_integration.py  test_engines.py  test_error_handling_integration.py  test_errors.py  test_gemini_engine.py  test_git_ops.py  test_pipeline_provider_matrix.py  test_runner_git_integration.py  test_runner_providers.py  test_runner_round_robin_integration.py  test_scheduler.py  test_skills.py  test_skills_gemini.py  test_tasks_model_contract.py  test_validate.py
