[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gralph"
version = "4.0.0"
description = "Autonomous AI Coding Loop — PRD to tasks to parallel execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FacuVCanale" },
]
keywords = ["ai", "automation", "coding", "agent", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "ruamel.yaml>=0.18",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
gralph = "gralph.cli:main"

[project.urls]
Homepage = "https://github.com/FacuVCanale/gralph"
Repository = "https://github.com/FacuVCanale/gralph"

[tool.hatch.build.targets.wheel]
packages = ["src/gralph"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that run only when --run-e2e is provided",
]
