[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gralph-dashboard"
version = "0.1.0"
description = "Terminal dashboard for visualizing gralph execution pipelines"

requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "watchfiles>=0.20",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
gralph-dashboard = "gralph_dashboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gralph_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["gralph_dashboard"]
mypy_path = "src"

[tool.ruff]
target-version = "py310"
src = ["src"]
